--- a/MHungerGames/build.gradle
+++ b/MHungerGames/build.gradle
@@ -9,6 +9,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id "com.github.johnrengelman.shadow" version "7.0.0"
 }
 
 repositories {
@@ -30,10 +31,14 @@ repositories {
 
 dependencies {
     // Use JUnit test framework.
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.0-jre'
+
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.3'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.12.3'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.3'
 
     // Spigot API
     compileOnly 'org.spigotmc:spigot-api:1.17-R0.1-SNAPSHOT'
