Loading kit works, need to see why it don't genereate a default config

--- a/MHungerGames/bin/main/plugin.yml
+++ b/MHungerGames/bin/main/plugin.yml
@@ -4,3 +4,7 @@ version: 1.0.0
 load: STARTUP
 author: Murilo Henrique Ghignatti
 website: https://github.com/MuriloGhignatti?tab=repositories
+commands:
+  kit:
+    description: Select your kit
+    usage: /kit {kitName}
